# IP-camera-software

./: .gitignore  Cargo.toml  README.md  config.json  setup.sh
src/: main.rs
static/: index.html  style.css
